--- a/src/main/resources/templates/board/list.html
+++ b/src/main/resources/templates/board/list.html
@@ -1,8 +1,10 @@
-<html xmlns:th="http://www.thymeleaf.org">>
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>board</title>
 </head>
 <body>
-    <h3>list</h3>
+<h3>list</h3>
+<a th:href="@{/board/get?register}">register</a>
+<a th:href="@{/board/get?read}">read</a>
 </body>
 </html>
