--- a/src/main/resources/templates/board/register.html
+++ b/src/main/resources/templates/board/register.html
@@ -1,8 +1,12 @@
-<html xmlns:th="http://www.thymeleaf.org">>
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>board</title>
 </head>
 <body>
 <h3>register</h3>
+<form th:action="@{/board/post}" method="post">
+    <button type="submit" nema="register">register</button>
+</form>
+<a th:href="@{/board/get?list}">list</a>
 </body>
 </html>
