요청처리 자바빈즈

--- a/src/main/resources/templates/registerForm.html
+++ b/src/main/resources/templates/registerForm.html
@@ -5,7 +5,122 @@
 <body>
 <h1>register Form</h1>
 
-<a th:href="@{}">list</a>
+<form th:action="@{/register01}" method="post">
+    userId : <input type="text" name="userId" value="leejunsu1"> <br>
+    password : <input type="text" name="password" value="1q2w3e"> <br>
+    coin : <input type="text" name="coin" value="111"> <br>
+    <input type="submit" value="register01">
+</form>
+
+<form th:action="@{/register02}" method="post">
+    userId : <input type="text" name="userId" value="leejunsu1"> <br>
+    password : <input type="text" name="password" value="1q2w3e"> <br>
+    coin : <input type="text" name="coin" value="111"> <br>
+    <input type="submit" value="register02">
+</form>
+
+<form th:action="@{/register03}" method="post">
+    uid : <input type="text" name="uid" value="50"> <br>
+    userId : <input type="text" name="userId" value="leejunsu1"> <br>
+    password : <input type="text" name="password" value="1q2w3e"> <br>
+    coin : <input type="text" name="coin" value="111"> <br>
+    <input type="submit" value="register03">
+</form>
+
+
+
+
+
+
+
+
+
+
+
+
+<!--<a th:href="@{register/leejunsu}">register/leejunsu</a> <br>-->
+<!--<a th:href="@{register/leejunsu/777}">register/leejunsu/777</a> <br>-->
+
+
+<!--<form th:action="@{/register01}" method="post">-->
+<!--    userId : <input type="text" name="userId" value="leejunsu1"> <br>-->
+<!--    password : <input type="text" name="password" value="1q2w3e"> <br>-->
+<!--    coin : <input type="text" name="coin" value="111"> <br>-->
+<!--    <input type="submit" value="register01">-->
+<!--</form>-->
+
+<!--<form th:action="@{/register0201}" method="post">-->
+<!--    userId : <input type="text" name="userId" value="leejunsu2"> <br>-->
+<!--    password : <input type="text" name="password" value="1q2w3e"> <br>-->
+<!--    coin : <input type="text" name="coin" value="222"> <br>-->
+<!--    <input type="submit" value="register0201">-->
+<!--</form>-->
+
+<!--<form th:action="@{/register0202}" method="post">-->
+<!--    userId : <input type="text" name="userId" value="leejunsu3"> <br>-->
+<!--    password : <input type="text" name="password" value="1q2w3e"> <br>-->
+<!--    coin : <input type="text" name="coin" value="333"> <br>-->
+<!--    <input type="submit" value="register0202">-->
+<!--</form>-->
+
+<!--<form th:action="@{/register0301}" method="post">-->
+<!--    userId : <input type="text" name="userId" value="leejunsu4"> <br>-->
+<!--    password : <input type="text" name="password" value="1q2w3e"> <br>-->
+<!--    coin : <input type="text" name="coin" value="444"> <br>-->
+<!--    <input type="submit" value="register0301">-->
+<!--</form>-->
+
+<!--<form th:action="@{/register0302}" method="post">-->
+<!--    userId : <input type="text" name="userId" value="leejunsu4"> <br>-->
+<!--    password : <input type="text" name="password" value="1q2w3e"> <br>-->
+<!--    coin : <input type="text" name="coin" value="555"> <br>-->
+<!--    <input type="submit" value="register0302">-->
+<!--</form>-->
+
+
+
+
+
+
+
+
+<!--<a th:href="@{register?userId=leejunsu&password=1234}">register?userId=leejunsu&password=1234</a> <br>-->
+<!--<a th:href="@{register/leejunsu}">register/leejunsu2</a> <br>-->
+
+<!--<form th:action="@{/register01}" method="post">-->
+<!--    userId : <input type="text" name="userId" value="leejunsu1"> <br>-->
+<!--    password : <input type="text" name="password" value="1q2w3e"> <br>-->
+<!--    coin : <input type="text" name="coin" value="111"> <br>-->
+<!--    <input type="submit" value="register01">-->
+<!--</form>-->
+
+<!--<form th:action="@{/register02}" method="post">-->
+<!--    userId : <input type="text" name="userId" value="leejunsu2"> <br>-->
+<!--    password : <input type="text" name="password" value="1q2w3e"> <br>-->
+<!--    coin : <input type="text" name="coin" value="222"> <br>-->
+<!--    <input type="submit" value="register02">-->
+<!--</form>-->
+
+<!--<form th:action="@{/register03}" method="post">-->
+<!--    userId : <input type="text" name="userId" value="leejunsu3"> <br>-->
+<!--    password : <input type="text" name="password" value="1q2w3e"> <br>-->
+<!--    coin : <input type="text" name="coin" value="333"> <br>-->
+<!--    <input type="submit" value="register03">-->
+<!--</form>-->
+
+<!--<form th:action="@{/register04}" method="post">-->
+<!--    userId : <input type="text" name="userId" value="leejunsu4"> <br>-->
+<!--    password : <input type="text" name="password" value="1q2w3e"> <br>-->
+<!--    coin : <input type="text" name="coin" value="444"> <br>-->
+<!--    <input type="submit" value="register04">-->
+<!--</form>-->
+
+<!--<form th:action="@{/register05}" method="post">-->
+<!--    userId : <input type="text" name="userId" value="leejunsu4"> <br>-->
+<!--    password : <input type="text" name="password" value="1q2w3e"> <br>-->
+<!--    coin : <input type="text" name="coin" value="555"> <br>-->
+<!--    <input type="submit" value="register05">-->
+<!--</form>-->
 
 </body>
 </html>
