--- a/src/main/resources/templates/registerForm.html
+++ b/src/main/resources/templates/registerForm.html
@@ -5,27 +5,49 @@
 <body>
 <h1>register Form</h1>
 
-<form th:action="@{/register01}" method="post">
+<a th:href="@{registerByGet01?userId=leejunsu&dateOfBirth=1234}">registerByGet01?userId=leejunsu&dateOfBirth=1234</a> <br>
+<a th:href="@{registerByGet01?userId=leejunsu&dateOfBirth=2021-08-08}">registerByGet01?userId=leejunsu&dateOfBirth=2021-08-08</a> <br>
+<a th:href="@{registerByGet01?userId=leejunsu&dateOfBirth=20210808}">registerByGet01?userId=leejunsu&dateOfBirth=20210808</a> <br>
+<a th:href="@{registerByGet01?userId=leejunsu&dateOfBirth=2021/08/08}">registerByGet01?userId=leejunsu&dateOfBirth=2021/08/08</a> <br>
+<a th:href="@{registerByGet02?userId=leejunsu&dateOfBirth=20210808}">registerByGet02?userId=leejunsu&dateOfBirth=20210808</a> <br>
+
+
+<form th:action="@{/register}" method="post">
     userId : <input type="text" name="userId" value="leejunsu1"> <br>
     password : <input type="text" name="password" value="1q2w3e"> <br>
-    coin : <input type="text" name="coin" value="111"> <br>
-    <input type="submit" value="register01">
+    dateOfBirth : <input type="text" name="dateOfBirth" value="20210824"> <br>
+    <input type="submit" value="register">
 </form>
 
-<form th:action="@{/register02}" method="post">
-    userId : <input type="text" name="userId" value="leejunsu1"> <br>
-    password : <input type="text" name="password" value="1q2w3e"> <br>
-    coin : <input type="text" name="coin" value="111"> <br>
-    <input type="submit" value="register02">
-</form>
 
-<form th:action="@{/register03}" method="post">
-    uid : <input type="text" name="uid" value="50"> <br>
-    userId : <input type="text" name="userId" value="leejunsu1"> <br>
-    password : <input type="text" name="password" value="1q2w3e"> <br>
-    coin : <input type="text" name="coin" value="111"> <br>
-    <input type="submit" value="register03">
-</form>
+
+
+
+
+
+
+
+<!--<form th:action="@{/register01}" method="post">-->
+<!--    userId : <input type="text" name="userId" value="leejunsu1"> <br>-->
+<!--    password : <input type="text" name="password" value="1q2w3e"> <br>-->
+<!--    coin : <input type="text" name="coin" value="111"> <br>-->
+<!--    <input type="submit" value="register01">-->
+<!--</form>-->
+
+<!--<form th:action="@{/register02}" method="post">-->
+<!--    userId : <input type="text" name="userId" value="leejunsu1"> <br>-->
+<!--    password : <input type="text" name="password" value="1q2w3e"> <br>-->
+<!--    coin : <input type="text" name="coin" value="111"> <br>-->
+<!--    <input type="submit" value="register02">-->
+<!--</form>-->
+
+<!--<form th:action="@{/register03}" method="post">-->
+<!--    uid : <input type="text" name="uid" value="50"> <br>-->
+<!--    userId : <input type="text" name="userId" value="leejunsu1"> <br>-->
+<!--    password : <input type="text" name="password" value="1q2w3e"> <br>-->
+<!--    coin : <input type="text" name="coin" value="111"> <br>-->
+<!--    <input type="submit" value="register03">-->
+<!--</form>-->
 
 
 
